--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,4 +31,4 @@ jobs:
        username: ${{ secrets.DOCKERHUB_USERNAME }}
        password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Output github context object
-      run: echo "${{toJSON(github)}}
+      run: echo "${{toJSON(github)}}"
