Print github event

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,3 +34,5 @@ jobs:
       run: echo "${{toJSON(github)}}"
     - name: Output env context object
       run: echo "${{toJSON(env)}}"
+	- name: Output github event
+      run: echo "${{toJSON(github.event)}}"
