Added branch filter in pull req event

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [ "dev" ]
   pull_request:
+    branches: ["dev"]
     types: -opened
+           -closed    
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
